src/assets/style/common.less
/* common style */
@primary-color: #5352ed;
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: Poppins;
    &:focus {
        outline: 2px solid @primary-color;
    }
}
body {
    min-height: 100vh;
}
li {
    list-style: none;
}
html {
    font-size: 16px;
    background: url(https://picsum.photos/1920/1080) fixed;
}
::selection {
    background-color: white;
    color: @primary-color;
}
// 滚动条
::-webkit-scrollbar {
    width: 10px;
    height: 10px;
    background: rgba(255, 255, 255, .2);
}
::-webkit-scrollbar-track {
    background: rgba(255, 255, 255, .2);
}
::-webkit-scrollbar-thumb {
    border-radius: 8px;
    background: @primary-color;
}

/* components */
// 滑块
.slider {
    // the diameter of thumb
    @thumb-diameter: 18px;
    vertical-align: middle;
    appearance: none;
    width: 200px;
    height: calc(@thumb-diameter * 2);
    outline: none;
    overflow: hidden;
    cursor: pointer;
    background-color: transparent;
    &::-webkit-slider-thumb {
        appearance: none;
        width: @thumb-diameter;
        height: @thumb-diameter;
        border-radius: 50%;
        position: relative;
        top: calc(-18px / 2 + 5px / 2);
        background-color: @primary-color;
        transition: .2s ease;
    }
    &::-webkit-slider-runnable-track {
        height: 5px;
        background-color: lighten(@primary-color, 25%);
    }
    &:hover::-webkit-slider-thumb {
        width: calc(@thumb-diameter * 1.5);
        height: calc(@thumb-diameter * 1.5);
        top: calc((@thumb-diameter / -2 + 5px / 2) * 1.5);
    }
    &:active::-webkit-slider-thumb {
        background-color: darken(@primary-color, 5%);
    }
}

// 文本框
.gg-input {
    border: none;
    line-height: 36px;
    border-radius: 5px;
    background: lighten(@primary-color, 25%);
    padding-left: 5px;
    &+.gg-input {
        margin-left: 5px;
        margin-top: 5px;
    }
    &.gg-number-input {
        appearance: none;
        &::-webkit-inner-spin-button {
            appearance: none;
        }
    }
}
// space
.space {
    height: 60px;
}
.space-lg {
    height: 100px;
}

